# kaspa-monitor

./: Cargo.toml  README.md  Trunk.toml
client/: Cargo.toml  index.html  manifest.json  pwa.js
client/src/: core.rs  error.rs  events.rs  imports.rs  main.rs  node.rs
client/src/modules/: mod.rs  overview.rs
client/src/services/: monitor.rs
core/: Cargo.toml
core/src/: caps.rs  imports.rs  lib.rs  prelude.rs  status.rs
macros/: Cargo.toml
macros/src/: handler.rs  lib.rs
macros/src/wrpc/: client.rs
nexus/: Cargo.toml
nexus/src/: args.rs  config.rs  connection.rs  context.rs  error.rs  event.rs  group.rs  imports.rs  lib.rs  monitor.rs  nexus.rs  node.rs  services.rs  tpl.rs  transport.rs
nexus/src/rpc/: kaspa.rs  mod.rs
rpc/client/: Cargo.toml
rpc/client/src/: client.rs  error.rs  imports.rs  lib.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs  imports.rs  message.rs
rpc/server/: Cargo.toml
rpc/server/src/: connection.rs  error.rs  imports.rs  router.rs  server.rs  service.rs
server/: Cargo.toml
server/src/: args.rs  error.rs  main.rs  monitor.rs
