[package]
name = "kaspa-monitor-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Kaspa Monitor Client"
readme = "../README.md"

[features]
console = []
# console = ["kaspa-ng-core/console"]

[dependencies]
# kaspa-ng-core.workspace = true
workflow-log.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# kaspa-alloc.workspace = true
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
