[package]
name = "kaspa-monitor-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Kaspa Monitor Client"
readme = "../README.md"

[[bin]]
name = "client"
path = "src/main.rs"

[features]
console = []

[dependencies]
kaspa-metrics-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-monitor-core.workspace = true
kaspa-monitor-rpc-core.workspace = true
kaspa-monitor-rpc-client.workspace = true

ahash.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
futures.workspace = true
itertools.workspace = true
pad.workspace = true
separator.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
workflow-egui.workspace = true
workflow-log.workspace = true

egui.workspace = true
eframe.workspace = true
epaint.workspace = true
egui_plot.workspace = true
egui_extras.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
