[package]
name = "kaspa-monitor-nexus"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-monitor-macros.workspace = true
kaspa-monitor-core.workspace = true
# sparkle-database.workspace = true
kaspa-monitor-rpc-core.workspace = true

kaspa-metrics-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wrpc-client.workspace = true
sparkle-rpc-core.workspace = true
sparkle-rpc-client.workspace = true

ahash.workspace = true
arc-swap.workspace = true
async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
chrono.workspace = true
cliclack.workspace = true
downcast-rs.workspace = true
enum_dispatch.workspace = true
evm.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
futures.workspace = true
hex-literal.workspace = true
hex.workspace = true
itertools.workspace = true
mini-moka.workspace = true
primitive-types.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde-hex.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
xxhash-rust.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-encryption.workspace = true
# workflow-websocket.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
dirs.workspace = true
num_cpus.workspace = true
